# Pagefind-Example-Usage-Rust

./: Cargo.toml  README.md  data.json  index.html
src/: main.rs
static/: index.html
static/pagefind/: pagefind-entry.json  pagefind.en_1b1815a120.pf_meta  pagefind.en_edb8206f58.pf_meta  wasm.en.pagefind  wasm.unknown.pagefind
static/pagefind/fragment/: en_1e9595e.pf_fragment  en_2ac5b95.pf_fragment  en_37dc255.pf_fragment  en_382a98c.pf_fragment  en_5fcbffe.pf_fragment  en_73644f1.pf_fragment  en_7429abf.pf_fragment  en_796a8c5.pf_fragment  en_7d2bd8a.pf_fragment  en_820dff6.pf_fragment  en_9390c51.pf_fragment  en_a9ceed9.pf_fragment  en_b4c12b2.pf_fragment  en_ba52e71.pf_fragment  en_bd02cbc.pf_fragment  en_ccf1b12.pf_fragment  en_ea9eb47.pf_fragment  en_eda8c61.pf_fragment  en_fab4aab.pf_fragment  en_fae5ce6.pf_fragment
static/pagefind/index/: en_618664c.pf_index
