[package]
name = "make_indexes"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = { version = "0.13.2", features = ["serde"] }
pagefind = { path = "../pagefind/pagefind/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.0", features = ["full"] }
